# lexdesk

./: .env.example  .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pages/: Chat.tsx  Invoices.tsx  Marketing.tsx  OnePager.tsx  Settings.tsx  SiteEditor.tsx
src/store/: chat.ts  settings.ts
