[package]
name = "lexdesk"
version = "1.0.0"
description = "LexDesk — LexAi branded desktop workspace"
authors = ["LexAi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "clipboard-all", "http-all", "dialog-save", "fs-write-file", "fs-read-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
